--- a/asset/style.css
+++ b/asset/style.css
@@ -1,25 +1,61 @@
-.debug{
-  background-color: rgba(0, 140, 255, 0.472);
-  border: 1px solid black;
+body{
+  font-family: 'Roboto', sans-serif;
 }
 
-.top_bar{
-  width: 100%;
-  height: 50px;
+
+.debug{
+  background-color: rgba(146, 201, 245, 0.472);
+  border: 1px solid black;
+  min-height: 50px;
 }
+
+[class^=col]{
+  background-color: cadetblue;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+
+/* TOP BAR */
+.top_bar{
+  width: 100vw;
+  height: 70px;
+}
+
+/* MAIN */
 
 main{
-  margin-top: 50px;
+  margin-top: 70px;
+  height: calc(100vh - 70px);
 }
 
+/* Aside */
 .aside_bar{
   width: 50px;
-  height: calc(100% - 50px);
-  background-color: rgb(97, 97, 97);
+  height: 100%;
+  padding: 20px 0;
+  background-color: #051e34;
+  background-image: url(./img/sidebar-bg.png);
 }
 
+.aside_bar .top_aside li{
+  margin-bottom: 20px;
+}
+
+.aside_bar span{
+  display: none;
+  margin-left: 10px;
+}
+
+
+/* Main Content */
 .main_content{
   width: calc(100% - 50px);
+  height: 100%;
+  background-color: rgba(255, 183, 0, 0.319);
+  overflow: auto;
 }
 
 /* Responsive */
@@ -27,6 +63,14 @@ main{
 @media screen and (min-width: 992px){
   .aside_bar{
     width: 150px;
+  }
+
+  .aside_bar span{
+    display: inline-block;
+  }
+
+  .main_content{
+    width: calc(100% - 150px);
   }
 }
 
