--- a/asset/style.css
+++ b/asset/style.css
@@ -54,8 +54,23 @@ main{
 .main_content{
   width: calc(100% - 50px);
   height: 100%;
-  background-color: rgba(255, 183, 0, 0.319);
+  background-color: rgba(255, 183, 0, 0.3);
   overflow: auto;
+}
+
+tbody tr th{
+  width: 60%;
+}
+
+tbody tr th img{
+  width: 30px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+tbody tr th span{
+  vertical-align: middle;
+  font-size: 0.9rem;
 }
 
 /* Responsive */
