--- a/asset/style.css
+++ b/asset/style.css
@@ -9,10 +9,10 @@ body{
   min-height: 50px;
 }
 
-[class^=col]{
+/* [class^=col]{
   background-color: cadetblue;
 }
-
+ */
 a{
   text-decoration: none;
   color: white;
@@ -54,7 +54,6 @@ main{
 .main_content{
   width: calc(100% - 50px);
   height: 100%;
-  background-color: rgba(255, 183, 0, 0.3);
   overflow: auto;
 }
 
