--- a/asset/style.css
+++ b/asset/style.css
@@ -19,15 +19,37 @@ a{
 }
 
 /* TOP BAR */
+header{
+  background-color: #f8f9fa;
+}
 .top_bar{
-  width: 100vw;
+  width: 100%;
   height: 70px;
 }
+
+.top_bar .logo,
+.top_bar .action{
+  width: 150px;
+}
+
+.logo img{
+  width: 100%;
+  height: 100%;
+  padding: 10px 0 10px 10px;
+}
+
+.search_bar{
+  width: calc(100% - 150px);
+}
+
+.action{
+  padding-right: 20px;
+}
+
 
 /* MAIN */
 
 main{
-  margin-top: 70px;
   height: calc(100vh - 70px);
 }
 
