--- a/asset/style.css
+++ b/asset/style.css
@@ -40,10 +40,15 @@ header{
 
 .search_bar{
   width: calc(100% - 150px);
+  padding-left: 10px;
 }
 
 .action{
   padding-right: 20px;
+}
+
+.dropdown button{
+  background-color: #f8f9fa;
 }
 
 
@@ -86,16 +91,15 @@ main{
 }
 
 .main_content_bar{
-  height: 80px;
   color: white;
 }
 
-.left-name h2{
+.plane_name h2{
   margin-right: 5px;
 }
 
-.left .pills{
-  padding: 0.1rem 0.5rem;
+.plane .pills{
+  padding: 0.2rem 0.6rem;
   margin: 0 1px;
   font-size: 0.8rem;
   font-weight: bold;
@@ -103,7 +107,7 @@ main{
   border-radius: 0.8rem;
 }
 
-.left i{
+.plane i{
   font-size: 0.8rem;
   margin: 0 2px;
 }
@@ -119,10 +123,8 @@ tbody tr th img{
   margin-right: 5px;
 }
 
-thead,
-tbody{
-  vertical-align: middle;
-  font-size: 0.9rem;
+table{
+  font-size: 0.8rem;
 }
 
 td:nth-child(2),
@@ -143,6 +145,24 @@ tbody .btn{
 
 
 /* Responsive */
+@media screen and (min-width: 768px){
+  td:nth-child(3),
+  th:nth-child(3),
+  td:nth-child(2),
+  th:nth-child(2){
+    display: revert;
+  }
+
+  .main_content_bar{
+    justify-content: space-between;
+  }
+
+  .add_student{
+    order: 3;
+    align-self: flex-start;
+  }
+}
+
 
 @media screen and (min-width: 992px){
   .aside_bar{
@@ -156,13 +176,5 @@ tbody .btn{
   .main_content{
     width: calc(100% - 150px);
   }
-
-  td:nth-child(2),
-  td:nth-child(3),
-  th:nth-child(2),
-  th:nth-child(3){
-    display: revert;
-  }
-
 }
 
