--- a/asset/style.css
+++ b/asset/style.css
@@ -21,10 +21,11 @@ a{
 /* TOP BAR */
 header{
   background-color: #f8f9fa;
+  padding: 5px 0;
 }
 .top_bar{
   width: 100%;
-  height: 70px;
+  background-color: white;
 }
 
 .top_bar .logo,
@@ -43,12 +44,22 @@ header{
   padding-left: 10px;
 }
 
+.input-group,
+.form-control{
+  background-color: #e5e5e5;
+  border-radius: 5px;
+}
+
+.form-control{
+  border: 0;
+}
+
 .action{
   padding-right: 20px;
 }
 
 .dropdown button{
-  background-color: #f8f9fa;
+  background-color: white;
 }
 
 
